--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8888
+server.port=8108
 ##https端口号.
 #server.port=443
 ##证书的路径.
@@ -10,7 +10,7 @@ server.port=8888
 ##证书别名
 #server.ssl.keyAlias=tomcat
 
-###静态资源路径
-##spring.resources.static-locations=classpath:static/aligenie/
-
+#静态资源路径
+#说明网址：https://www.jianshu.com/p/a9e6edd46e98
+spring.resources.static-locations=classpath:static/aligenie/
 
