--- a/pom.xml
+++ b/pom.xml
@@ -91,8 +91,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <!--项目打成jar，同时把本地jar包也引入进去。很重要-->
+                    <includeSystemScope>true</includeSystemScope>
+                </configuration>
             </plugin>
         </plugins>
     </build>
 
 </project>
+
