--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ server.port=8108
 
 #静态资源路径
 #说明网址：https://www.jianshu.com/p/a9e6edd46e98
-spring.resources.static-locations=classpath:static/aligenie/
+spring.resources.static-locations=classpath:static/
 
