--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
             <version>1.2.51</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
 
     </dependencies>
 
