--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,9 @@ spring.resources.static-locations=classpath:static/
 #密钥
 token.secret = joijsdfjlsjfljfljl5135313135;
 
-expire.time = 15 * 60 * 1000
+#数据库配置
+mybatis.mapper-locations=classpath:mapping/*.xml
+spring.datasource.url=jdbc:mysql://localhost:3306/hello?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
