--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.resources.static-locations=classpath:static/
 token.secret = joijsdfjlsjfljfljl5135313135;
 
 #数据库配置
-mybatis.mapper-locations=classpath:mapping/*.xml
+mybatis.mapper-locations=classpath*:/mapping/*.xml
 spring.datasource.url=jdbc:mysql://localhost:3306/hello?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=root
