--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,7 +21,7 @@ token.secret = joijsdfjlsjfljfljl5135313135;
 mybatis.mapper-locations=classpath*:/mapping/*.xml
 spring.datasource.url=jdbc:mysql://localhost:3306/hello?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=1m$N50mA6NlOEFsz
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
