--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,45 +1,1 @@
-server.port=8108
-##https¶Ë¿ÚºÅ.
-#server.port=443
-##Ö¤ÊéµÄÂ·¾¶.
-#server.ssl.key-store=classpath:keystore.p12
-##Ö¤ÊéÃÜÂë£¬ÇëÐÞ¸ÄÎªÄú×Ô¼ºÖ¤ÊéµÄÃÜÂë.
-#server.ssl.key-store-password=123456
-##ÃØÔ¿¿âÀàÐÍ
-#server.ssl.keyStoreType=PKCS12
-##Ö¤Êé±ðÃû
-#server.ssl.keyAlias=tomcat
-
-#¾²Ì¬×ÊÔ´Â·¾¶
-#ËµÃ÷ÍøÖ·£ºhttps://www.jianshu.com/p/a9e6edd46e98
-spring.resources.static-locations=classpath:static/
-
-#ÃÜÔ¿
-token.secret = joijsdfjlsjfljfljl5135313135;
-
-#Êý¾Ý¿âÅäÖÃ
-mybatis.mapper-locations=classpath*:/mapping/*.xml
-spring.datasource.url=jdbc:mysql://localhost:3306/hello?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=1m$N50mA6NlOEFsz
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
-#redisÊý¾Ý¿â
-spring.redis.database=0
-#µØÖ·
-spring.redis.host=127.0.0.1
-#¶Ë¿Ú
-spring.redis.port=6379
-#ÃÜÂë
-spring.redis.password=bank123456
-# Á¬½Ó³Ø×î´óÁ¬½ÓÊý£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£©
-spring.redis.jedis.pool.max-active=8
-# Á¬½Ó³Ø×î´ó×èÈûµÈ´ýÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£©
-spring.redis.jedis.pool.max-wait=-1ms
-# Á¬½Ó³ØÖÐµÄ×î´ó¿ÕÏÐÁ¬½Ó
-spring.redis.jedis.pool.max-idle=8
-# Á¬½Ó³ØÖÐµÄ×îÐ¡¿ÕÏÐÁ¬½Ó
-spring.redis.jedis.pool.min-idle=0
-# Á¬½Ó³¬Ê±Ê±¼ä£¨ºÁÃë£©
-spring.redis.timeout=5000
+server.port=8108##httpsï¿½Ë¿Úºï¿½.#server.port=443##Ö¤ï¿½ï¿½ï¿½Â·ï¿½ï¿½.#server.ssl.key-store=classpath:keystore.p12##Ö¤ï¿½ï¿½ï¿½ï¿½ï¿½ë£¬ï¿½ï¿½ï¿½Þ¸ï¿½Îªï¿½ï¿½ï¿½Ô¼ï¿½Ö¤ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½.#server.ssl.key-store-password=123456##ï¿½ï¿½Ô¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½#server.ssl.keyStoreType=PKCS12##Ö¤ï¿½ï¿½ï¿½ï¿½ï¿½#server.ssl.keyAlias=tomcat#ï¿½ï¿½Ì¬ï¿½ï¿½Ô´Â·ï¿½ï¿½#Ëµï¿½ï¿½ï¿½ï¿½Ö·ï¿½ï¿½https://www.jianshu.com/p/a9e6edd46e98spring.resources.static-locations=classpath:static/#ï¿½ï¿½Ô¿token.secret = joijsdfjlsjfljfljl5135313135;#ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½mybatis.mapper-locations=classpath*:/mapping/*.xmlspring.datasource.url=jdbc:mysql://localhost:3306/hello?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Asia/Shanghaispring.datasource.username=rootspring.datasource.password=1m$N50mA6NlOEFszspring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver#redisï¿½ï¿½ï¿½Ý¿ï¿½spring.redis.database=0#ï¿½ï¿½Ö·spring.redis.host=127.0.0.1#ï¿½Ë¿ï¿½spring.redis.port=6379#ï¿½ï¿½ï¿½ï¿½spring.redis.password=bank123456# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½spring.redis.jedis.pool.max-active=8# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È´ï¿½Ê±ï¿½ä£¨Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½spring.redis.jedis.pool.max-wait=-1ms# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½spring.redis.jedis.pool.max-idle=8# ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½Ð¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½spring.redis.jedis.pool.min-idle=0# ï¿½ï¿½ï¿½Ó³ï¿½Ê±Ê±ï¿½ä£¨ï¿½ï¿½ï¿½ë£©spring.redis.timeout=5000
